--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@amplitude/analytics-node": "^1.0.1",
+    "@vercel/analytics": "^0.1.6",
     "autoprefixer": "^9.8.6",
     "gray-matter": "^4.0.2",
-    "next": "latest",
+    "next": "^12.0.0",
     "nextra": "^0.4.4",
     "nextra-theme-blog": "^0.1.5",
     "nextra-theme-docs": "^0.1.6",
